--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,24 @@
+@import-normalize;
+
+dl, ul, li, dt, dd {
+  margin:0;
+  padding:0;
+}
+
 body {
   margin: 0;
+
+  background-color:rgb(235, 235, 235);
+  color:#333;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-style:normal;
+  font-weight:400;
+  font-size:14px;
+  line-height:1.05em;
 }
 
 code {
