데이터를 api를 통해 받아올 수 있도록 테스트

--- a/src/components/style/common.scss
+++ b/src/components/style/common.scss
@@ -1,3 +1,6 @@
-@function space($val) {
+@function fontSize($val) {
   @return (14px * $val);
+}
+@function iconSize($val) {
+  @return (24px * $val);
 }
