--- a/src/App.scss
+++ b/src/App.scss
@@ -14,12 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  overflow:hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height:55px;
+
+  background-color: #282c34;
   font-size: calc(10px + 2vmin);
   color: white;
 }
