--- a/src/components/style/common.scss
+++ b/src/components/style/common.scss
@@ -4,3 +4,20 @@
 @function iconSize($val) {
   @return (24px * $val);
 }
+
+.designedButton {
+  $button: &;
+  margin:0;
+  padding:0;
+
+  background-color:transparent;
+  border:none;
+  border-radius:1em;
+  color:inherit;
+  cursor:pointer;
+  text-decoration:none;
+
+  @at-root a#{$button} {
+    display:inline-block;
+  }
+}
